src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_local_time__c</fullName>
        <formula>Country_Icon__c &amp; &quot; &quot; &amp; IF(Account.BillingState = &quot;&quot;, Account.BillingCity, Account.BillingState) &amp; &quot;, &quot; &amp; Country__c &amp; &quot; - &quot; &amp; Time__c &amp; &quot; &quot; &amp; Clock_Format__c &amp; IF(Use_Geolocation__c, &quot; (&quot; &amp; Region_Time__c &amp; &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account local time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Hours__c</fullName>
        <formula>TEXT(IF(Use_12_Hour_Format__c, Hours_12_format__c, Hour__c + Offset__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Minutes__c</fullName>
        <formula>IF(GMT_Minutes__c &lt; 10, &quot;0&quot; &amp; TEXT(GMT_Minutes__c), TEXT(GMT_Minutes__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_Format__c</fullName>
        <formula>IF(Use_12_Hour_Format__c, IF(Hour__c + Offset__c &lt; 12, &quot;AM&quot;, &quot;PM&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clock Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Icon__c</fullName>
        <formula>IF(Use_Geolocation__c, IMAGE(&quot;https://www.countryflags.io/&quot; &amp; Account.Country_Code__c &amp; &quot;/flat/16.png&quot;, Account.Country_Code__c, 16, 16), IF(Account.BillingCountry == &quot;US&quot;,IMAGE(&quot;https://bit.ly/2p4WwD0&quot;, &quot;US&quot;, 13, 16), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(Use_Geolocation__c, Account.Country_Code__c, Account.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMT_Minutes__c</fullName>
        <formula>MINUTE(TIMEVALUE(NOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMT Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <formula>HOUR(TIMENOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_12_format__c</fullName>
        <formula>IF ((Hour__c + Offset__c) &gt; 12, (Hour__c + Offset__c) - 12, Hour__c + Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours 12 format</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <formula>IF(Use_Geolocation__c, Account.GMT_Offset__c, Account.USA_Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Time__c</fullName>
        <formula>IF(Account.Time_zone_display_name__c != &quot;&quot;, Account.Time_zone_display_name__c, &quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>Billing_Hours__c &amp; &quot;:&quot; &amp; Billing_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_12_Hour_Format__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use 12 Hour Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Geolocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Geolocation</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>